--- a/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
+++ b/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
@@ -178,3 +178,12 @@
   color: #009de2 ! important;
   font-size: 30px;
 }
+
+.safari_BT4_txt{
+  height:100px;
+}
+
+
+.chrome_BT4_txt{
+  height:100px;
+}
