--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -269,17 +269,17 @@
  .para-top_website{
     margin-top: 20px ! important;
  }
- .B4T_ServicesDiv{
+ /*.B4T_ServicesDiv{
     margin-left: 73px ! important;
     min-height: 150px;
     width: 580px;
- }
- .B2T1_line{
+ }*/
+ /*.B2T1_line{
     margin-left: 174px ! important;
- }
- .B2T1_line1{
+ }*/
+/* .B2T1_line1{
     margin-left:345px ! important;
- }
+ }*/
  .B2T_serviceTitle{
     margin-left: 190px;
  }
