--- a/ui/website/src/allBlocks/Resourcedownload/Resourcedownload.css
+++ b/ui/website/src/allBlocks/Resourcedownload/Resourcedownload.css
@@ -1,5 +1,5 @@
 .B2T1_line1{
-  margin-left: 491px ! important;
+  /*margin-left: 491px ! important;*/
   background-color: #f08f00;
   width: 80px;
   height: 4px;
