--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -170,12 +170,12 @@
     font-size: 30px;
     font-weight: 700;
 }
-@media only screen and (max-width: 768px) {
+@media(max-width: 768px) {
   .para1-top{
    font-size: 27px ! important;
   }
   .line2{
-    width: 60px ! important;
+    width: 90px ! important;
   }
 }
 
@@ -529,4 +529,16 @@ margin-top: 100px;
     font-weight: 600;
     font-size: 18px;
     margin-left: 10px;
+}
+@media(max-width : 767px){
+  .line1{
+    margin-left:135px ! important;
+
+  }
+}
+@media(max-width : 768px){
+  .line1{
+    /*margin-left:118px ! important;*/
+
+  }
 }
