--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -395,3 +395,10 @@
     width: 300px ! important;
   }
  } 
+@media (max-width: 600px) {
+
+.webpageshopcont{
+  margin-left: 30px ! important;
+
+ }
+}
