--- a/ui/website/src/blockTemplate/DescBgImage/DescBgImage.css
+++ b/ui/website/src/blockTemplate/DescBgImage/DescBgImage.css
@@ -468,3 +468,9 @@ margin-top: 100px;
     font-size: 18px;
     padding-left: 10px;
 }
+@media(max-width : 767px){
+  .line1{
+    margin-left:135px ! important;
+
+  }
+}
