Karuna added changes

--- a/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
+++ b/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
@@ -1,4 +1,4 @@
-.innerBlocktepmlate3{
+.chrome_BT4_txt.innerBlocktepmlate3{
  height: auto;
 }
 .BT3_dataDiv{
@@ -185,5 +185,5 @@
 
 
 .chrome_BT4_txt{
-  height:100px;
+  height:160px;
 }
