--- a/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
+++ b/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
@@ -2,3 +2,10 @@
   width: 100%;
   /*height: 580px;*/
 }
+@media (max-width: 480px){
+	.services_img{
+	  width: 100%;
+	  height: 405px ! important;
+	  padding: 0px ! important;
+	}
+}
