Karuna added changes

--- a/ui/website/src/allBlocks/Commonstream/Commonstream.css
+++ b/ui/website/src/allBlocks/Commonstream/Commonstream.css
@@ -68,4 +68,10 @@
   .contentheader h2{
     font-size: 35px ! important;
   }
+  .para10{
+    width: 235px ! important;
+  }
+  .para11{
+    width: 235px ! important;
+  }
  }   
