--- a/ui/website/src/allBlocks/Lifecycle/Lifecycle.css
+++ b/ui/website/src/allBlocks/Lifecycle/Lifecycle.css
@@ -8,6 +8,7 @@
 .line_paraaaa{
     line-height: 30px;
     font-size: 17px;
+    text-align:justify;
 }
 .line_subheadd{
     /*font-weight: 600;*/
