--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -1223,27 +1223,32 @@ animation: fadeIn ease 20s;
   }
 
 .new_HoverDiv  img {
-    
+        
+        width: 345px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDiv1  img {
-    
+       
+       width: 345px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDiv2  img {
-    
+
+       width: 345px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDivforboat  img {
-    
+        
+        width: 345px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDiv3  img {
-    
+        
+        width: 345px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDiv4  img {
-    
+        width: 345px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDiv5  img {
@@ -1256,6 +1261,7 @@ animation: fadeIn ease 20s;
 }
 .new_HoverDiv7  img {
     
+        width: 345px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .rotate {
@@ -1321,7 +1327,7 @@ animation: fadeIn ease 20s;
 .new_HoverDiv1 {
     display: none;
     height: 275px;
-    width: 275px;
+    width: 310px ! important;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -176px;
@@ -1335,7 +1341,7 @@ animation: fadeIn ease 20s;
 .new_HoverDiv5 {
     display: none;
     height: 260px;
-    width: 260px;
+    width: 325px ! important;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -42px;
@@ -1345,10 +1351,13 @@ animation: fadeIn ease 20s;
     background-size: 100% 100%;
     
 }
+.new_HoverDiv5 img{
+  width: 350px ! important;
+}
 .new_HoverDiv2 {
     display: none;
     height: 275px;
-    width: 275px;
+    width: 320px;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -12px;
@@ -1376,7 +1385,7 @@ animation: fadeIn ease 20s;
 .new_HoverDiv4 {
     display: none;
     height: 275px;
-    width: 275px;
+    width: 304px;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: 11px;
@@ -1387,6 +1396,9 @@ animation: fadeIn ease 20s;
     opacity: 1;
     z-index: 1000000;
     
+}
+.new_HoverDiv4 img{
+  width: 300px ! important;
 }
 .new_HoverDiv6 {
     display: none;
@@ -1482,12 +1494,12 @@ animation: fadeIn ease 20s;
     width: 112px;
 }
 .newhovertxt_again{
-    top: 85px;
+    top: 94px;
     position: absolute;
-    width: 110px;
+    width: 160px;
     left: 72px;
     text-align: center;
-    font-size: 12px;
+    font-size: 11px;
 }
 .newhovertxt_6{
   margin-top: -176px;
@@ -1499,12 +1511,12 @@ animation: fadeIn ease 20s;
   width: 113px;
 }
 .newhovertxt_8{
-    margin-top: -175px;
-    margin-left: 51px;
+    margin-top: -227px;
+    margin-left: 59px;
     font-size: 11px;
     padding-left: 10px;
     text-align: center;
-    width: 130px;
+    width: 163px;
     position: absolute;
 }
 .newhovertxt_1{
@@ -1517,10 +1529,10 @@ animation: fadeIn ease 20s;
   width: 122px;
 }
 .newhovertxt_4{
-    margin-top: -183px;
+    margin-top: -217px;
     margin-left: 65px;
     font-size: 11px;
-    width: 124px;
+    width: 136px;
     /* padding-left: 10px; */
     text-align: center;
     position: absolute;
@@ -1533,14 +1545,27 @@ animation: fadeIn ease 20s;
   text-align: center;
 }
 .newhovertxt_e_p{
-  margin-top: -176px;
-  margin-left: 49px;
-  font-size: 11px;
-  padding-left: 10px;
-  text-align: center;
-  position: absolute;
-  width: 149px;
+    margin-top: -208px;
+    margin-left: 66px;
+    font-size: 11px;
+    padding-left: 10px;
+    text-align: center;
+    position: absolute;
+    width: 138px;
 
+}
+.newhovertxt_e_p1{
+    margin-top: -186px;
+    margin-left: 56px;
+    font-size: 11px;
+    padding-left: 10px;
+    text-align: center;
+    position: absolute;
+    width: 140px;
+
+}
+.new_HoverDivforboat img{
+  width: 300px;
 }
 .newhovertxt_ptrchemical{
     margin-top: -184px;
@@ -1552,7 +1577,7 @@ animation: fadeIn ease 20s;
     width: 111px;
 }
 .servicekbtnarrow1{
-   margin-left: 127px;
+   margin-left: 145px;
     color: #000;
     margin-top: -110px;
     font-size: 13px;
@@ -1575,7 +1600,7 @@ animation: fadeIn ease 20s;
 .servicekbtnarrow4 {
     margin-left: 127px;
     color: #000;
-    margin-top: -106px;
+    margin-top: -100px;
     font-size: 13px;
     position: absolute;
 }
@@ -1594,9 +1619,9 @@ animation: fadeIn ease 20s;
     position: absolute;
 }
 .servicekbtnarrow8 {
-    left: 111px;
+    left: 145px;
     color: #000;
-    top: 153px;
+    top: 202px;
     font-size: 13px;
     position: absolute;
 }
