Karuna added changes

--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -1604,6 +1604,13 @@ animation: fadeIn ease 20s;
     font-size: 13px;
     position: absolute;
 }
+.servicekbtnarrow4_1 {
+    margin-left: 127px;
+    color: #000;
+    margin-top: -103px;
+    font-size: 13px;
+    position: absolute;
+}
 .servicekbtnarrow5 {
     left: 124px;
     color: #000;
