--- a/ui/website/src/blockTemplate/News_Events/News_Events.css
+++ b/ui/website/src/blockTemplate/News_Events/News_Events.css
@@ -39,7 +39,7 @@
     box-shadow: -3px 1px 6px 5px #f3f3f3;
     width: 63px;
     height: 47px;
-
+    padding-left:7px;
     padding-top: 3px;
 
     /*margin-right: 15px;*/
