--- a/ui/website/src/allBlocks/ServicesOffered/ServicesOffered.css
+++ b/ui/website/src/allBlocks/ServicesOffered/ServicesOffered.css
@@ -16,7 +16,7 @@
   	font-weight: 600;
   }
   .innerServiceDiv{
-  	padding-left: 45px;
+  	/*padding-left: 45px;*/
   }
   .B2T_serviceTitle{
 	/*top: 53px;
