--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -14,6 +14,9 @@
     margin-top: 40px;
     margin-left: 32px;
 }
+.TypeBTnP{
+  font-size: 17px ! important;
+}
 .righttextaboutus{
 	margin-top: 25px;
 	font-size: 17px ! important;
