--- a/ui/website/src/allBlocks/Aboutusimgright/Aboutusimgright.css
+++ b/ui/website/src/allBlocks/Aboutusimgright/Aboutusimgright.css
@@ -2,7 +2,7 @@
     line-height: 23px;
     letter-spacing: 0.5px;
     margin-top: 188px;  
-    color: #000;
+    /*color: #000;*/
     margin-left: 52px;
-    font-size: 18px;
+    font-size: 17px;
 }
