--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -850,7 +850,7 @@ height: 90px;
   /*left: 968px;*/
   bottom: 0px;
   right: 262px;
-  top: 153px;
+  top: 173px;
   height: 168px;
   animation: slide-left 4s ;
   /*z-index: 110;*/
@@ -1037,7 +1037,7 @@ height: 90px;
    animation: slide-top 4s;
    bottom: 0px;
    right: 470px;
-   top: 261px;
+   top: 281px;
    height: 168px;
 }
 .petrolimage{
@@ -1053,9 +1053,9 @@ height: 90px;
 .petrolimage1{
   position: absolute;
   right: 278px;
-  top: 383px;
+  top: 403px;
   height: 221px;
-   animation: slide-top 4s;
+  animation: slide-top 4s;
    /*opacity: 0.7;*/
 
 }
@@ -1073,7 +1073,7 @@ height: 90px;
 .plantimage11{
    position: absolute;
   right: 88px;
-  top: 282px;
+  top: 302px;
   height: 168px;
   animation: slide-tl 4s;
   /*opacity: 1;*/
@@ -1081,10 +1081,10 @@ height: 90px;
 }
 .fade-in {
 animation: fadeIn ease 20s;
--webkit-animation: fadeIn ease 20s;
--moz-animation: fadeIn ease 20s;
--o-animation: fadeIn ease 20s;
--ms-animation: fadeIn ease 20s;
+-webkit-animation: fadeIn ease 10s;
+-moz-animation: fadeIn ease 10s;
+-o-animation: fadeIn ease 10s;
+-ms-animation: fadeIn ease 10s;
 }
 @keyframes fadeIn {
 0% {opacity:0;}
@@ -1136,13 +1136,13 @@ animation: fadeIn ease 20s;
 
 }
 */
-.scaleimage:hover{
+/*.scaleimage:hover{
   -ms-transform: scale(1.2);
   -webkit-transform: scale(1.2);
   transform: scale(1.1); 
   transition: all 2s ease-in-out;
 
-}
+}*/
 .boat_img2:hover{
   z-index: 120;
 }
@@ -1167,7 +1167,7 @@ animation: fadeIn ease 20s;
   left: 97px;
   top: 104px;
   width: 304px;
-  height: 207px;
+  height: 229px;
   animation: slide-br 4s
   /*z-index: 110;*/
   /*opacity:1;*/
@@ -1196,14 +1196,14 @@ animation: fadeIn ease 20s;
 }
 .new_HoverDivforboat{
    height: 275px;
-    width: 275px;
+    width: 355px;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -38px;
-    margin-top: -23px;
+    margin-top: -41px;
     position: absolute;
     background-size: 100% 100%;
-    animation: fadeIn ease 3s;
+    animation: fadeIn ease 2s;
     z-index: 110;
     display: none;
 
@@ -1218,7 +1218,7 @@ animation: fadeIn ease 20s;
     margin-top: -167px;
     position: absolute;
     background-size: 100% 100%;
-    animation: fadeIn ease 3s;
+    animation: fadeIn ease 2s;
     z-index: 110;
   }
 
@@ -1229,7 +1229,7 @@ animation: fadeIn ease 20s;
 }
 .new_HoverDiv1  img {
        
-       width: 345px;
+       width: 350px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDiv2  img {
@@ -1327,13 +1327,13 @@ animation: fadeIn ease 20s;
 .new_HoverDiv1 {
     display: none;
     height: 275px;
-    width: 310px ! important;
+    width: 350px ! important;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -176px;
-    margin-top: -55px;
+    margin-top: -103px;
     position: absolute;
-    animation: fadeIn ease 3s;
+    animation: fadeIn ease 1.5s;
     background-size: 100% 100%;
     z-index: 110;
     
@@ -1341,18 +1341,18 @@ animation: fadeIn ease 20s;
 .new_HoverDiv5 {
     display: none;
     height: 260px;
-    width: 325px ! important;
+    width: 376px ! important;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
-    margin-left: -42px;
-    margin-top: -138px;
-    animation: fadeIn ease 3s;
+    margin-left: -84px;
+    margin-top: -227px;
+    animation: fadeIn ease 1.5s;
     position: absolute;
     background-size: 100% 100%;
     
 }
 .new_HoverDiv5 img{
-  width: 350px ! important;
+  width: 360px ! important;
 }
 .new_HoverDiv2 {
     display: none;
@@ -1361,8 +1361,8 @@ animation: fadeIn ease 20s;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -12px;
-    animation: fadeIn ease 3s;
-    margin-top: -142px;
+    animation: fadeIn ease 1.5s;
+    margin-top: -241px;
     position: absolute;
     background-size: 100% 100%;
     z-index:200;
@@ -1371,13 +1371,13 @@ animation: fadeIn ease 20s;
 .new_HoverDiv3 {
     display: none;
     height: 275px;
-    width: 275px;
+    width: 355px;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -26px;
     margin-top: -130px;
     position: absolute;
-    animation: fadeIn ease 3s;
+    animation: fadeIn ease 1.5s;
     background-size: 100% 100%;
     z-index: 110;
     
@@ -1385,12 +1385,12 @@ animation: fadeIn ease 20s;
 .new_HoverDiv4 {
     display: none;
     height: 275px;
-    width: 304px;
+    width: 355px;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
-    margin-left: 11px;
-    animation: fadeIn ease 3s;
-    margin-top: -143px;
+    margin-left: -33px;
+    animation: fadeIn ease 1.5s;
+    margin-top: -235px;
     position: absolute;
     background-size: 100% 100%;
     opacity: 1;
@@ -1398,14 +1398,14 @@ animation: fadeIn ease 20s;
     
 }
 .new_HoverDiv4 img{
-  width: 300px ! important;
+  width: 360px ! important;
 }
 .new_HoverDiv6 {
     display: none;
     height: 275px;
-    width: 275px;
+    width: 355px;
     border-radius: 5px;
-    animation: fadeIn ease 3s;
+    animation: fadeIn ease 1.5s;
     /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -98px;
     margin-top: -175px;
@@ -1417,12 +1417,12 @@ animation: fadeIn ease 20s;
 .new_HoverDiv7 {
     display: none;
     height: 274px;
-    width: 281px;
+    width: 355px;
     border-radius: 5px;
     /*background-image: url(/images/newbanner_img14.png);*/
-    margin-left: 16px;
-    margin-top: -128px;
-    animation: fadeIn ease 3s;
+    margin-left: -39px;
+    margin-top: -150px;
+    animation: fadeIn ease 1.5s;
     position: absolute;
     background-size: 100% 100%;
     z-index: 250;
@@ -1485,54 +1485,54 @@ animation: fadeIn ease 20s;
   opacity: 0.3;
 }
 .newhovertxt{
-    margin-top: -196px;
-    margin-left: 66px;
-    font-size: 11px;
+    margin-top: -232px;
+    margin-left: 82px;
+    font-size: 13px;
     padding-left: 10px;
     text-align: center;
     position: absolute;
-    width: 112px;
+    width: 143px;
 }
 .newhovertxt_again{
-    top: 106px;
+    top: 99px;
     position: absolute;
-    width: 164px;
-    left: 72px;
+    width: 141px;
+    left: 86px;
     text-align: center;
-    font-size: 11px;
+    font-size: 13px;
 }
 .newhovertxt_6{
   margin-top: -176px;
   margin-left: 68px;
-  font-size: 11px;
+  font-size: 12px;
   padding-left: 10px;
   text-align: center;
   position: absolute;
   width: 113px;
 }
 .newhovertxt_8{
-    margin-top: -219px;
-    margin-left: 59px;
-    font-size: 11px;
+    margin-top: -253px;
+    margin-left: 76px;
+    font-size: 12.8px;
     padding-left: 10px;
     text-align: center;
-    width: 168px;
+    width: 164px;
     position: absolute;
 }
 .newhovertxt_1{
   margin-top: -181px;
   margin-left: 62px;
-  font-size: 11px;
+  font-size: 12px;
   padding-left: 10px;
   text-align: center;
   position: fixed;
   width: 122px;
 }
 .newhovertxt_4{
-    margin-top: -217px;
-    margin-left: 65px;
-    font-size: 11px;
-    width: 136px;
+    margin-top: -254px;
+    margin-left: 91px;
+    font-size: 13px;
+    width: 150px;
     /* padding-left: 10px; */
     text-align: center;
     position: absolute;
@@ -1540,14 +1540,14 @@ animation: fadeIn ease 20s;
 .newhovertxt_5{
   margin-top: 78px;
   margin-left: 62px;
-  font-size: 11px;
+  font-size: 12px;
   padding-left: 10px;
   text-align: center;
 }
 .newhovertxt_e_p{
-    margin-top: -208px;
-    margin-left: 66px;
-    font-size: 11px;
+    margin-top: -234px;
+    margin-left: 85px;
+    font-size: 13px;
     padding-left: 10px;
     text-align: center;
     position: absolute;
@@ -1555,22 +1555,22 @@ animation: fadeIn ease 20s;
 
 }
 .newhovertxt_e_p1{
-    margin-top: -186px;
-    margin-left: 56px;
-    font-size: 11px;
+    margin-top: -226px;
+    margin-left: 81px;
+    font-size: 13px;
     padding-left: 10px;
     text-align: center;
     position: absolute;
-    width: 140px;
+    width: 133px;
 
 }
 .new_HoverDivforboat img{
-  width: 300px;
+  width: 330px;
 }
 .newhovertxt_ptrchemical{
     margin-top: -184px;
     margin-left: 72px;
-    font-size: 11px;
+    font-size: 12px;
     padding-left: 10px;
     text-align: center;
     position: absolute;
@@ -1591,23 +1591,23 @@ animation: fadeIn ease 20s;
     position: absolute;
 }
 .servicekbtnarrow3 {
-    margin-left: 119px;
+    margin-left: 156px;
     color: #000;
-    margin-top: -105px;
+    margin-top: -124px;
     font-size: 13px;
     position: absolute;
 }
 .servicekbtnarrow4 {
-    margin-left: 127px;
+    margin-left: 151px;
     color: #000;
-    margin-top: -114px;
+    margin-top: -122px;
     font-size: 13px;
     position: absolute;
 }
 .servicekbtnarrow4_1 {
-    margin-left: 127px;
+    margin-left: 144px;
     color: #000;
-    margin-top: -103px;
+    margin-top: -114px;
     font-size: 13px;
     position: absolute;
 }
@@ -1619,16 +1619,16 @@ animation: fadeIn ease 20s;
     position: absolute;
 }
 .servicekbtnarrow7{
-    margin-left: 126px;
+    margin-left: 151px;
     color: #000;
-    margin-top: -106px;
+    margin-top: -122px;
     font-size: 13px;
     position: absolute;
 }
 .servicekbtnarrow8 {
-    left: 145px;
+    left: 158px;
     color: #000;
-    top: 202px;
+    top: 234px;
     font-size: 13px;
     position: absolute;
 }
