--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -30,7 +30,8 @@
 .blogdate{
   text-align: justify;
   padding: 10px 20px;
-  font-size: 11px;
+  font-size: 13px;
+  margin-top: 118px;
 
 }
 .blogtext h4{
@@ -52,13 +53,14 @@
 }
 
 .blogblock{
+  height: 650px ! important;
 	box-shadow: 0 10px 29px rgba(92,141,255,.22);
 	border-radius: 8px;
 
 }
 
 .blogbtn1{
-	margin-bottom: 15px;
+  	margin-top: 125px;
     border-radius: 20px;
     color: #fff;
 }
