--- a/ui/website/src/allBlocks/BlogContent/BlogContent.css
+++ b/ui/website/src/allBlocks/BlogContent/BlogContent.css
@@ -1,5 +1,5 @@
 .blogContentDiv p, .blogContentDiv li{
-	font-family: 'Open Sans', sans-serif;
+	/*font-family: 'Open Sans', sans-serif;*/
 	font-size: 16px !important;
 	line-height: 25px;
 	color:#303133;
