--- a/ui/website/src/allBlocks/Commonstream/Commonstream.css
+++ b/ui/website/src/allBlocks/Commonstream/Commonstream.css
@@ -25,8 +25,8 @@
   top :0px;
   transform: rotate(0deg);
   transition-duration: 0.9s;
-  margin-inline-start: 45px;
-  margin-inline-end: 28px;
+  /*margin-inline-start: 45px;*/
+  /*margin-inline-end: 28px;*/
 }
 .paraeffect12{
   position: relative;
