--- a/ui/website/src/allPages/Servicearmspage/Servicearmspage.css
+++ b/ui/website/src/allPages/Servicearmspage/Servicearmspage.css
@@ -6,7 +6,7 @@ body{
   /*overflow-x: hidden;*/
 }
 div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
-	font-family: 'Open Sans', sans-serif ! important;
+	/*font-family: 'Open Sans', sans-serif ! important;*/
 	color:#000;
 }
 p{
