--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -134,7 +134,7 @@
   width: 95px;
   border: 1px solid #f19000;
   background-color: #f19000;
-  margin-bottom: 39px;
+  /*margin-bottom: 39px;*/
 }
 
 /*.block1height{
