--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -129,7 +129,7 @@
 .topnav a {
   float: left;
   display: block;
-  color: #333;
+  color: #000;
   text-align: center;
   padding: 14px 7px;
   text-decoration: none;
@@ -155,10 +155,10 @@
   font-size: 12px;    
   border: none;
   outline: none;
-  color: #333;
+  color: #000;
   padding: 14px 7px;
   background-color: inherit;
-  font-family: inherit;
+  /*font-family: inherit;*/
   margin: 0;
   font-weight: 700;
 }
